docs/api/qiskit/0.42/ibmq_job.md
---
title: job
description: API reference for qiskit.providers.ibmq.job
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.providers.ibmq.job
---

<Admonition title="Warning" type="caution">
  The package `qiskit-ibmq-provider` is being deprecated and its repo is going to be archived soon. Please transition to the new packages. More information in [https://ibm.biz/provider\_migration\_guide](https://ibm.biz/provider_migration_guide)
</Admonition>

<span id="module-qiskit.providers.ibmq.job" />

<span id="qiskit-providers-ibmq-job" />

# Job

<span id="module-qiskit.providers.ibmq.job" />

`qiskit.providers.ibmq.job¶`

Modules representing IBM Quantum Experience jobs.

## Classes

<span id="module-qiskit.providers.ibmq.job" />

`¶`

|                                                                                                                                |                                                                             |
| ------------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------- |
| [`IBMQJob`](qiskit.providers.ibmq.job.IBMQJob "qiskit.providers.ibmq.job.IBMQJob")(backend, api\_client, job\_id, ...\[, ...]) | Representation of a job that executes on an IBM Quantum Experience backend. |
| [`QueueInfo`](qiskit.providers.ibmq.job.QueueInfo "qiskit.providers.ibmq.job.QueueInfo")(\[position, status, ...])             | Queue information for a job.                                                |

## Functions

<span id="module-qiskit.providers.ibmq.job" />

`¶`

|                                                                                                                          |                                              |
| ------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------- |
| [`job_monitor`](qiskit.providers.ibmq.job.job_monitor "qiskit.providers.ibmq.job.job_monitor")(job\[, interval, output]) | Monitor the status of an `IBMQJob` instance. |

## Exception

<span id="module-qiskit.providers.ibmq.job" />

`¶`

|                                                                                                                                                  |                                                                     |
| ------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------- |
| [`IBMQJobError`](qiskit.providers.ibmq.job.IBMQJobError "qiskit.providers.ibmq.job.IBMQJobError")(\*message)                                     | Base class for errors raised by the job modules.                    |
| [`IBMQJobApiError`](qiskit.providers.ibmq.job.IBMQJobApiError "qiskit.providers.ibmq.job.IBMQJobApiError")(\*message)                            | Errors that occur unexpectedly when querying the server.            |
| [`IBMQJobFailureError`](qiskit.providers.ibmq.job.IBMQJobFailureError "qiskit.providers.ibmq.job.IBMQJobFailureError")(\*message)                | Errors raised when a job failed.                                    |
| [`IBMQJobInvalidStateError`](qiskit.providers.ibmq.job.IBMQJobInvalidStateError "qiskit.providers.ibmq.job.IBMQJobInvalidStateError")(\*message) | Errors raised when a job is not in a valid state for the operation. |
| [`IBMQJobTimeoutError`](qiskit.providers.ibmq.job.IBMQJobTimeoutError "qiskit.providers.ibmq.job.IBMQJobTimeoutError")(\*message)                | Errors raised when a job operation times out.                       |

